# my-scripts

./: .gitignore  CITATION.cff  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
Bash/Installation/: debug.sh  update.sh
Python/Data analysis/Impact parameters/: impact_parameters_1D.py
Python/Data analysis/WbWb/: OverlapSelections.py  impact_parameters_2D.py
bash/: debug.sh  setup_env.sh  uninstall_cpp.sh  update.sh
bash/installation/: install.sh  uninstall.sh
python/data analysis/WbWb/: OverlapSelections.py
python/data analysis/impact parameters/: compare_plots.py  impact_parameters_1D.py
python/dirs_remover/: dirs_remover.py
python/send_whatsapp/: requirements.txt  send_whatsapp.py
python/size_of_dir/: requirements.txt
scripts/bash/: benchmarking.sh  debug.sh  include_tests.sh  update.sh
scripts/bash/installation/: install.sh  system_update.sh
scripts/cmake/Qt_installer/: CMakeLists.txt
scripts/python/compute_lines/: compute_lines.py
scripts/python/data analysis/WbWb/: requirements.txt
scripts/python/data analysis/impact parameters/: impact_parameters_2D.py  requirements.txt
scripts/python/file management/: requirements.txt  size_of_dir.py
scripts/python/size_of_dir/: size_of_dir.py
scripts/python/system_info/: system_info.py
